--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,11 +24,12 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
+  primary:    #f4f4f4,
   secondary:  #32db64,
   danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  light:      #387ef5,
+  dark:       #222,
+  twitter:    #55acee
 );
 
 
