--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -30,7 +30,10 @@ $colors: (
   light:      #387ef5,
   dark:       #222,
   twitter:    #55acee,
-  yellow:     #0xFFFF00FF,
+  alerta:     #d2e1dd,
+  twit:(
+    base: #FFA500,
+    contrast: #FFA500)
 );
 
 
